--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -1,29 +1,11 @@
-<h1>Listing attractions</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Short desc</th>
-      <th>Long desc</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @attractions.each do |attraction| %>
-      <tr>
-        <td><%= attraction.title %></td>
-        <td><%= attraction.short_desc %></td>
-        <td><%= attraction.long_desc %></td>
-        <td><%= link_to 'Show', attraction %></td>
-        <td><%= link_to 'Edit', edit_attraction_path(attraction) %></td>
-        <td><%= link_to 'Destroy', attraction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Attraction', new_attraction_path %>
+<h2>
+  I want to
+  <select id="category">
+    <option></option>
+    <option>Eat</option>
+    <option>Shop</option>
+    <option>Explore</option>
+    <option>Party</option>
+    <option>Learn</option>
+  </select>
+</h2>
