--- a/app/assets/stylesheets/attractions.css.scss
+++ b/app/assets/stylesheets/attractions.css.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the attractions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.centered {
+  margin:auto;
+  text-align: center;
+}
+
+.logo {
+    margin:20% 0%;
+}
+
+.logo-text {
+    font-size:10vw;
+    font-family:"Futura", sans-serif;
+    color:black;
+}
+
+.box {
+  margin: 20% 0%;
+}
+
+.main-text {
+  font-size:4vw;
+}
+
+#category {
+  -webkit-appearance:none;
+  -moz-appearance:none;
+  appearance:none;
+  font-size:4vw;
+  background-color:white;
+}
