--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -1,11 +1,16 @@
-<h2>
-  I want to
-  <select id="category">
-    <option></option>
-    <option>Eat</option>
-    <option>Shop</option>
-    <option>Explore</option>
-    <option>Party</option>
-    <option>Learn</option>
-  </select>
-</h2>
+<div class="logo centered">
+  <h1 class="logo-text placeholder">Hello LA!</h1>
+</div>
+<div class="box centered">
+  <h2 class="main-text">
+    I want to
+    <select id="category">
+      <option></option>
+      <option>Eat</option>
+      <option>Shop</option>
+      <option>Explore</option>
+      <option>Party</option>
+      <option>Learn</option>
+    </select>
+  </h2>
+</div>
