--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,9 @@
  *= require_self
  */
 
-#body {
-  margin:0% 20%;
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
+
+body {
   font-family:sans-serif;
 }
