--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -1,19 +1,14 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @attraction.title %>
-</p>
-
-<p>
-  <strong>Short desc:</strong>
-  <%= @attraction.short_desc %>
-</p>
-
-<p>
-  <strong>Long desc:</strong>
-  <%= @attraction.long_desc %>
-</p>
-
-<%= link_to 'Edit', edit_attraction_path(@attraction) %> |
-<%= link_to 'Back', attractions_path %>
+<%= content_tag :section, class:"header-image" do %>
+  <%= content_tag :h1, class:'floating-name', title:@attraction.image_name do %>
+    <%= @attraction.title %>
+    <%= content_tag :span, class:'subtitle' do %>
+      <%= @attraction.subtitle %>
+    <% end %>
+  <% end %>
+<% end %>
+<%= content_tag :section, style:"background-color:#{tag_color(1,@attraction)}; color:white;" do %>
+  <p><%= @attraction.long_desc %></p>
+<% end %>
+<%= content_tag :section, style:"background-color:#{tag_color(2,@attraction)}; color:white;" do %>
+  <p><%= @attraction.tips %></p>
+<% end %>
