Added more images & places for testing

--- a/app/assets/stylesheets/attractions.css.scss
+++ b/app/assets/stylesheets/attractions.css.scss
@@ -41,6 +41,10 @@ section p {
   overflow:visible;
 }
 
+section.logo-slide {
+  min-height:50vh;
+}
+
 section .floating-name {
   text-align: center;
   background-size: cover;
