Added auto scrolling to homepage

--- a/app/assets/stylesheets/attractions.css.scss
+++ b/app/assets/stylesheets/attractions.css.scss
@@ -66,19 +66,19 @@
 	margin: auto;
 	margin-top: 150px;
 }
-h4:before{
-	content:'v';
-	transform:rotate(180deg);
-	position: absolute;
-	top:-85px;
-	left:153px;
-}
-h4:after{
-	content:'v';
-	position: absolute;
-	top:85px;
-	left:153px;
-}
+// h4:before{
+// 	content:'v';
+// 	transform:rotate(180deg);
+// 	position: absolute;
+// 	top:-85px;
+// 	left:153px;
+// }
+// h4:after{
+// 	content:'v';
+// 	position: absolute;
+// 	top:85px;
+// 	left:153px;
+// }
 h4 b{
 	position: relative;
 	margin-left: 10px;
