--- a/app/views/attractions/_attraction_swatch_template.html.erb
+++ b/app/views/attractions/_attraction_swatch_template.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :div, class:"swatch", style:"background-image:url(../assets/#{attraction.image_name}" do %>
+<%= content_tag :div, class:"swatch", style:"background-image:url(#{asset_path(attraction.image_name)}" do %>
   <%= link_to attraction do %>
     <div class="overlay">
       <p><%= attraction.subtitle %></p>
