--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,7 @@
 
 
  @font-face {
- 	font-family: 'Futura Std';
+ 	font-family: 'Futura Bold';
  	src: url('FuturaStd-Bold.eot');
  	src: url('FuturaStd-Bold.eot?#iefix') format('embedded-opentype'),
  		url('FuturaStd-Bold.woff') format('woff'),
@@ -31,7 +31,7 @@
  }
 
  @font-face {
- 	font-family: 'Futura Std';
+ 	font-family: 'Futura Extra Bold';
  	src: url('FuturaStd-ExtraBold.eot');
  	src: url('FuturaStd-ExtraBold.eot?#iefix') format('embedded-opentype'),
  		url('FuturaStd-ExtraBold.woff') format('woff'),
@@ -41,7 +41,7 @@
  }
 
  @font-face {
- 	font-family: 'Futura Std';
+ 	font-family: 'Futura Book Oblique';
  	src: url('FuturaStd-BookOblique.eot');
  	src: url('FuturaStd-BookOblique.eot?#iefix') format('embedded-opentype'),
  		url('FuturaStd-BookOblique.woff') format('woff'),
@@ -51,7 +51,7 @@
  }
 
  @font-face {
- 	font-family: 'Futura Std';
+ 	font-family: 'Futura Book';
  	src: url('FuturaStd-Book.eot');
  	src: url('FuturaStd-Book.eot?#iefix') format('embedded-opentype'),
  		url('FuturaStd-Book.woff') format('woff'),
