--- a/app/assets/stylesheets/attractions.css.scss
+++ b/app/assets/stylesheets/attractions.css.scss
@@ -162,6 +162,9 @@ h4 b:after{
 	text-align: center;
 	padding: 80px;
 }
+.title h1 {
+	font-family:"Futura Bold", "Futura", sans-serif;
+}
 .title img {
 	width: 80px;
 	margin-bottom: 0
