--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -293,7 +293,7 @@
     </div>
 
     <div class="category Party">
-      <%= link_to "category/party" do %>
+      <%= link_to "categories/party" do %>
       <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
          viewBox="0 0 663.2 663.2" style="enable-background:new 0 0 663.2 663.2;" xml:space="preserve">
       <style type="text/css">
