--- a/app/assets/stylesheets/attractions.css.scss
+++ b/app/assets/stylesheets/attractions.css.scss
@@ -9,7 +9,7 @@
 .homeSplash{
 	text-align: center;
 	min-height: 80%;
-	background: url('MapW2.svg');
+	background: asset-url('MapW2.svg');
 	background-color:  rgba(255,0,0,0.5);
 	background-position: -200px -200px;
 	background-size:200% auto;
